--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Cartoon</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -67,10 +67,11 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>cartoon</h2>
+							<p>從小到大的回憶<br />
+							卡通大集合<br />
+						    回味童年 <br />
+						    creat by<a href="https://www.facebook.com/profile.php?id=100000607164992">yi-an</a>.</p>
 							<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
 							</ul>
@@ -82,10 +83,11 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>cartoon</h2>
+								<p>A cartoon is a type of illustration<br />
+							    possibly animated typically in a non-realistic<br />
+							    or semi-realistic style<br />
+								</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
