--- a/index.html
+++ b/index.html
@@ -100,10 +100,9 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="ihttps://upload.wikimedia.org/wikipedia/zh/thumb/3/37/Adventure_Time_-_Title_card.png/375px-Adventure_Time_-_Title_card.png" alt="" /></div><div class="content">
+								<h2>探險活寶</h2>
+								<p>故事追隨阿寶（Finn Mertens the Human) 和一隻擁有能夠任意伸縮自己身體的魔力，是他最好的朋友同時也是養父親生大兒子的狗兒老皮（Jake the dog）展開的探險旅程，他們生活在蘑菇戰爭1000年後的哇賽秘境（Land of Ooo），沿著旅途陸續遇上劇中其他的主要角色：泡泡糖公主（Princess Bubblegum）、冰霸王（The Ice King）以及吸血鬼女王艾薇爾（Marceline the Vampire Queen）。</p>
 							</div>
 						</section>
 						<section class="spotlight">
