--- a/index.html
+++ b/index.html
@@ -100,16 +100,15 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="ihttps://upload.wikimedia.org/wikipedia/zh/thumb/3/37/Adventure_Time_-_Title_card.png/375px-Adventure_Time_-_Title_card.png" alt="" /></div><div class="content">
+							<div class="image"><img src="http://p1-news.yamedia.tw/NzIyMzE1bmV3cw==/61650ef9e70d9f29.jpg" alt="" /></div><div class="content">
 								<h2>探險活寶</h2>
 								<p>故事追隨阿寶（Finn Mertens the Human) 和一隻擁有能夠任意伸縮自己身體的魔力，是他最好的朋友同時也是養父親生大兒子的狗兒老皮（Jake the dog）展開的探險旅程，他們生活在蘑菇戰爭1000年後的哇賽秘境（Land of Ooo），沿著旅途陸續遇上劇中其他的主要角色：泡泡糖公主（Princess Bubblegum）、冰霸王（The Ice King）以及吸血鬼女王艾薇爾（Marceline the Vampire Queen）。</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="http://www.lotsfun.com.tw/upload/articles/20170122190444911_new.jpg" alt="" /></div><div class="content">
+								<h2>名偵探柯南</h2>
+								<p>主角工藤新一原本是一位經常幫助警方破案的17歲高中生偵探；某一天和青梅竹馬的女朋友毛利蘭在熱帶樂園遊玩時目擊黑暗組織的可疑行動，獨自前往交易現場時卻遭另一名同夥從背後偷襲擊昏，並灌下代號為「APTX-4869」的神秘藥物。後來雖然倖免於死，但身體就此縮小為小學一年級時的模樣；情急之下化名為江戶川柯南，在鄰居阿笠博士的建議下，寄住在毛利蘭的父親毛利小五郎家中。同時他也憑藉著過人的推理能力，以及使用阿笠博士為他發明的各種道具，讓小五郎成為全國知名的名偵探，並藉由平時的案件調查找尋有關黑暗組織的線索。</p>
 							</div>
 						</section>
 						<section class="spotlight">
