--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="http://p1-news.yamedia.tw/NzIyMzE1bmV3cw==/61650ef9e70d9f29.jpg" alt="" /></div><div class="content">
-								<h2>探險活寶</h2>
-								<p>故事追隨阿寶（Finn Mertens the Human) 和一隻擁有能夠任意伸縮自己身體的魔力，是他最好的朋友同時也是養父親生大兒子的狗兒老皮（Jake the dog）展開的探險旅程，他們生活在蘑菇戰爭1000年後的哇賽秘境（Land of Ooo），沿著旅途陸續遇上劇中其他的主要角色：泡泡糖公主（Princess Bubblegum）、冰霸王（The Ice King）以及吸血鬼女王艾薇爾（Marceline the Vampire Queen）。</p>
+							<div class="image"><img src="https://cdn2.ettoday.net/images/1422/d1422340.jpg" alt="" /></div><div class="content">
+								<h2>魔法DoReMi</h2>
+								<p>自稱為「世界上最不幸的美少女」的春風DoReMi，一直相信這世界上有魔女，並希望自己成為魔女後可以向喜歡的人（當時是五十嵐學長）表白。有一天放學時，春風DoReMi經過一間名叫「薪旗山莉卡魔法堂」的店舖。進入一探究竟時，碰巧拆穿了當時魔法堂的老闆－「魔女莉卡」具有魔女身份，而導致她變成魔女青蛙。由於只有識破的人變成魔女才可讓魔女莉卡恢復原貌，為了幫助魔女莉卡回復原狀，DoReMi成為了魔女見習生，並要在魔女見習生9個級別（第9級至第1級）的考試中合格，從而取得魔女的象徵──自己的水晶球，才能成為正式魔女。期間，羽月、愛子與DoReMi的妹妹泡泡，因為先後知道DoReMi是魔女見習生，為了不讓DoReMi也變成魔女青蛙，因此也陸續成為魔女見習生。</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -112,10 +112,9 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="https://vbmspic.video.friday.tw/GROUP/L/296_4348462.jpg" alt="" /></div><div class="content">
+								<h2>我們這一家</h2>
+								<p>故事是以立花一家人所發生的生活瑣事為主軸，他們並非模範家庭，既平凡又普通，就像是我們生活周遭的人一般：就算是小事情也非常認真的媽媽；洗完澡光著身子在客廳走動的爸爸；女兒是個普通的高中女生；兒子則是個乍看之下很酷，但實則不然的中學生。每一個小故事可能都曾發生在你我身邊，非常有親切感，讓人不禁會心一笑。</p>
 							</div>
 						</section>
 					</section>
